# ms-health

./: Dockerfile  README.md  pyproject.toml
k8s/: deployment.yaml  ingress.yaml  service.yaml
k8s/nginx/: nginx-ingress.yaml
src/app/api/: routers.py
src/app/api/health/: endpoint.py
src/app/config/: settings.py
